added links to styles and rerouted index links to direct pages

--- a/app/views/design-system/styles/images.html
+++ b/app/views/design-system/styles/images.html
@@ -28,13 +28,13 @@ Start page template - NHS.UK prototype kit
                             <nav id="toc" class="js-toc-list toc__list">
                                 <ol class="article-section-nav__list">
                                     <li>
-                                        <a href="styles/colours">Colours</a>
+                                        <a href="colours">Colours</a>
                                     </li>
                                     <li>
-                                        <a href="styles/images">Images</a>
+                                        <a href="images">Images</a>
                                     </li>
                                     <li>
-                                        <a href="styles/icon-usage">Icons</a>
+                                        <a href="icon-usage">Icons</a>
                                     </li>
                                 </ol>
                             </nav>
@@ -46,30 +46,16 @@ Start page template - NHS.UK prototype kit
     </div>
 
     <div class="nhsuk-grid-column-two-thirds">
-        <h1>Styles</h1>
+        <span class="nhsuk-caption-l">
+            Styles
+            
+          
+          </span>  <h1>Images</h1>
 
-      <p class="nhsuk-body-l">Digital services for government staff users in the NHSBSA (new services and existing digital services that are being redeveloped) should use these styles.</p>
-      <p>In the NHSBSA this includes:</p>
-      <ul class="list list-bullet">
-        <li>caseworking systems</li>
-        <li>microsites</li>
-        <li>intranets</li>
-      </ul>
-<!--      <p>The styles are available in a <a href="#">NHSBSA version of the prototype kit</a>.</p>-->
+      <p class="nhsuk-body-l">Something about images</p>
+      
 
-
-      <h2>Why we created these styles</h2>
-<!--      <p>If your service is not on a gov.uk or service.gov.uk domain, you cannot use the GOV.UK crown logo (Service Manual, <a href="https://www.gov.uk/service-manual/design/services-for-government-users">Services for government users</a>) or the <a href="https://designnotes.blog.gov.uk/2015/03/11/can-i-use-the-gov-uk-fonts/">GDS Transport font</a>.</p>-->
-      
-<!--
-      <p>Most NHSBSA services for NHS staff users fall within these restrictions. For those services, these styles replace the GOV.UK styling.</p>
-      
--->
-      <p>This guidance applies to digital services, and does not affect or change any of the NHSBSA's existing brand advice for print and offline applications.</p>
-<!--
-      
-       <p>Read a blog post about <a href="#0">why we created seperate styling for services for government users</a>.</p> 
--->
+      <h2>Using Images</h2>
 
     </div>
 
