--- a/app/views/index.html
+++ b/app/views/index.html
@@ -47,13 +47,13 @@ NHSBSA design system - Home
                                         <a href="#about" aria-label="Scroll to 'About'" title="Scroll to 'About'">Summary</a>
                                     </li>
                                     <li>
-                                        <a href="#patterns">Patterns</a>
+                                        <a href="/design-system/patterns">Patterns</a>
                                     </li>
                                     <li>
-                                        <a href="#components">Components</a>
+                                        <a href="/design-system/components">Components</a>
                                     </li>
                                     <li>
-                                        <a href="#styles">Styles</a>
+                                        <a href="/design-system/styles">Styles</a>
                                     </li>
                                 </ol>
                             </nav>
@@ -78,7 +78,7 @@ NHSBSA design system - Home
         </div>
 
         <div id="components" class="article-section ">
-            <h2><a href="components/components">Components</a></h2>
+            <h2><a href="/design-system/components">Components</a></h2>
             <p>blah</p>
         </div>
 
