--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,11 +28,6 @@ NHSBSA design system - Home
 
 
 {% block content %}
-<div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-full">
-        <h1>Patterns, components and styles for NHSBSA services</h1>
-    </div>
-</div>
 
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-one-third">
@@ -42,10 +37,8 @@ NHSBSA design system - Home
                     <div class="article-section-nav-wrapper">
                         <div class="article-section-nav">
                             <nav id="toc" class="js-toc-list toc__list">
+                                <h2>Design</h2>
                                 <ol class="article-section-nav__list">
-                                    <li>
-                                        <a href="#about" aria-label="Scroll to 'About'" title="Scroll to 'About'">Summary</a>
-                                    </li>
                                     <li>
                                         <a href="#patterns">Patterns</a>
                                     </li>
@@ -65,28 +58,13 @@ NHSBSA design system - Home
     </div>
 
     <div class="nhsuk-grid-column-two-thirds">
+        <h1>Patterns, components and styles for NHSBSA services</h1>
         <div id="about" class="article-section">
             <p class="nhsuk-body-l">This design system is for everyone. It's purpose is to extend the NHS.UK Design System with work specific to the NHSBSA. Learn from the research and experience of other service teams and avoid repeating work that has already been done.</p>
 
             <p>Any work which would benefit teams across government will be contributed to the <a href="https://beta.nhs.uk/service-manual/styles-components-patterns">NHS.UK system</a>.</p>
 
         </div>
-
-        <div id="patterns" class="article-section">
-            <h2><a href="/design-system/patterns">Patterns</a></h2>
-            <p>blah</p>
-        </div>
-
-        <div id="components" class="article-section ">
-            <h2><a href="components/components">Components</a></h2>
-            <p>blah</p>
-        </div>
-
-        <div id="styles" class="article-section ">
-            <h2><a href="styles/styles">Styles</a></h2>
-            <p>blaaaahhhhh</p>
-        </div>
-
     </div>
 
 </div>
